<resources>
    <string name="app_name">PHOZ</string>
    <string name="Korean">Korean</string>
    <string name="Korea">Korea</string>
    <string name="Russian">Russian</string>
    <string name="Russia">Russia</string>
    <string name="Setting">Setting</string>
    <string name="SaintPetersburg">상트 뻬쩨르부르크</string>
    <string name="PeterhofPalace">여름궁전</string>
    <string name="BusinessTime">운영시간</string>
    <string name="PeterhofPalaceBT">월, 수, 목, 금, 토, 일요일 10:00~21:30</string>
    <string name="Address">주소</string>
    <string name="PeterhofPalaceAD">набережная канала Грибоедова, 2Б, литер А, Санкт-Петербург, Россия</string>
    <string name="PeterhofPalaceEX">상트페테르부르크에서 약 30㎞ 떨어진 핀란드만 해변가에 위치하고 있다. 표트르 대제가 파티 장소로 쓰기 위해 만든 것으로, 당시 러시아 제국의 위엄과 황제의 권위를 과시하기 위한 목적이었다. 러시아와 유럽 최고 건축가들과 예술가들이 총동원되어, 20여 개의 궁전과 140개의 화려한 분수, 7개의 아름다운 공원이 만들어졌다. 현재 박물관으로 사용 중인 여름궁전 1층에는 표트르 대제의 응접실과 서재, 침실 등이 있으며 2층에는 왕실 대대로 내려오는 가구와 도자기들이 전시되어 있다.</string>
    <string name="ChristRevivalCathedral">그리스도 부활 성당</string>
    <string name="ChristRevivalCathedralBT">월, 화, 목~일요일 10:30~18:00</string>
    <string name="ChristRevivalCathedralAD">набережная канала Грибоедова, 2Б, литер А, Санкт-Петербург, Россия</string>
    <string name="ChristRevivalCathedralEX">그리스도 부활 성당은 사원이 있는 곳이 알렉산드르 2세가 피를 흘리면서 죽은 곳이기 때문에 피의 사원이라고도 불린다. 알렉산드르 2세는 1881년 살해당했는데, 훗날 황제가 된 알렉산드르 3세가 알렉산드르 2세를 기리기 위하여 이 성당을 지었다. 모스크바에 있는 성 바실리 대성당을 모델로 하여 세웠으나 전체 분위기는 러시아 건축의 특징을 고스란히 지니고 있다. 특히 이 사원은 유명한 화가들이 직접 도안한 모자이크화가 많이 있는 게 특징이다.</string>
    <string name="KazanCathedral">카잔 대성당</string>
    <string name="KazanCathedralBT">매일, 6:30~19:45</string>
    <string name="KazanCathedralAD">Казанская площадь, 2, Санкт-Петербург, Россия</string>
    <string name="KazanCathedralEX">카잔 대성당은 러시아 상트페테르부르크 넵스키 대로에 있는 러시아 정교회의 대성당으로, 로마의 산피에트로 대성당을 본뜬 네오클래식 양식의 건물이다. 반원형의 회랑에는 94개의 코린트식 기둥이 늘어서 있고, 건물 내부에는 19세기 초의 거장들이 그린 이콘이 있다. 러시아에서 가장 공경하고 있는 성화 중 하나인 카잔의 성모에게 봉헌되었다. 또한 성당이 완성된 후 러시아가 나폴레옹 전쟁에서 승리를 거두어 성당 안에는 프랑스군에게서 빼앗은 107개의 군기와 승리의 트로피 등이 걸려 있다.</string>
    <string name="BronzeHorseman">청동 기마상</string>
    <string name="BronzeHorsemanAD">Адмиралтейский район, муниципальный округ Адмиралтейский, Санкт-Петербург, Россия</string>
    <string name="BronzeHorsemanEX">원로원 광장 끝 네바 강변에 위치한 기마상으로, 쿠데타로 남편을 죽이고 왕위에 오른 예카테리나 2세가 자신이 표트르 대제의 후계자임을 알리기 위해 만든 것이다. 프랑스 조각가 팔코네가 1766년부터 12년에 걸쳐 만들었다. 동상을 받치고 있는 돌은 400명이 넘는 장정들이 네바 강변까지 옮겨오는 데만도 약 4개월의 시간이 걸렸다고 전해진다.</string>
    <string name="StIsaacCathedral">성 이삭 대성당</string>
    <string name="StIsaacCathedralBT">월,화,목~일요일 10:30~17:30</string>
    <string name="StIsaacCathedralAD">Исаакиевская площадь, 4, Санкт-Петербург, Россия</string>
    <string name="StIsaacCathedralEX">세계에서 세 번째로 큰 규모인 황금빛 돔 지붕이 눈에 띄는 성당으로, 성 이삭의 날인 5월 30일에 태어난 표트르 대제를 기리기 위해 건립된 곳이다. 청동 기마상 맞은편에 위치한 것으로, 총 14,000명을 수용할 수 있을 만큼 웅장한 규모를 자랑한다. 1818년 몽페란드가 설계하고 40년이 지난 뒤에 완공되었다. 성당 내부에는 성서 내용과 성인을 묘사한 러시아 화가들의 회화 작품 및 조각품이 150점 넘게 전시되어 있고, 62점의 독특한 모자이크 프레스코화도 전시되어 있다. 43m 높이의 성당 전망대에 오르면 상트페테르부르크의 전경을 한눈에 볼 수 있다.</string>
    <string name="MariinskyTheatre">마린스키 극장</string>
    <string name="MariinskyTheatreBT">매일, 11:00~19:00 </string>
    <string name="MariinskyTheatreAD">Адрес : Театральная площадь, 1, Санкт-Петербург, Россия</string>
    <string name="MariinskyTheatreEX">마린스키 극장은 알렉산드르 2세의 지시에 따라 지어진 호화로운 19세기 극장으로 서늘한 푸른빛을 띤 웅장한 건물이다. 극장은 1,625석의 객석이 5단으로 놓여있고 사치스럽게 채색된 커튼과 호화로운 하늘색, 금빛, 크리스탈 벽장식이 늘어져있다. 연한 푸른색과 짙은 푸른색을 띤 벽과 벨벳 의자, 커튼 등을 배경으로 들어선 훌륭한 주물 장식과 설화 석고로 만든 조각상들은 극장의 인상 깊은 장관을 완벽하게 마무리해 준다.</string>
    <string name="HermitageMuseum">에르미타주 미술관 </string>
    <string name="HermitageMuseumBT">화요일 10:30~18:00, 수요일 10:30~21:00, 목요일 10:30~18:00, 금요일 10:30~21:00, 토~일요일 10:30~18:00</string>
    <string name="HermitageMuseumAD">Адрес : Дворцовая площадь, 2, Санкт-Петербург, Россия</string>
    <string name="HermitageMuseumEX">국립 에르미타주 미술관은 상트페테르부르크에 위치한 예술과 문화 박물관으로, 세계에서 가장 크고 오래된 미술관 중 하나로 꼽히는 곳이다. 1764년 예카테리나 대제가 베를린 상인에게 회화를 구입해 수집을 시작하며 미술관 컬렉션의 기초를 마련하였으며, 1852년부터 외부에 공개되기 시작했다. 에르미타주는 굉장히 크고 넓으며 고대 유물, 보석류와 장식미술품, 르네상스 작품, 이탈리아와 스페인 회화, 황금시대와 바로크 회화, 신고전주의, 인상파, 신인상파 작품, 근대 회화들이 전시되어있다.</string>
    <string name="Peterhof">페테르고프</string>
    <string name="PeterhofBT">월~금요일 09:00~20:00</string>
    <string name="PeterhofAD">Адрес : Разводная ул., 2, Петергоф, Санкт-Петербург, Россия</string>
    <string name="PeterhofEX">페테르고프는 20개가 넘는 궁전과 파빌리온이 핀란드만을 따라 뻗은 드넓은 정원에 흩어져 있다. 왕궁은 이전에는 귀족들의 궁전과 교외 별장의 언저리와 담을 맞대고 있었지만 모두 제2차 세계 대전 때 파괴되었고, 그 이후 복원되지 못했다. 대부분의 구성 요소들은 두드러지는 특징은 없지만, 전체는 단순히 각각의 부분을 모아놓은 것보다 훨씬 위대하다. 대궁전과 핀란드만 사이에는 대폭포와 해양 운하가 놓여 있는데, 표트르 대제가 처음 만든 이후 19세기에 이르기까지 뒤를 이은 황제들이 제각각 하부 공원에 덧붙인 폭포와 분수는 물을 사용하여 즐길 수 있는 세계에서 가장 빼어난 공간을 형성하고 있다.</string>
    <string name="VladimirVostock">블라디보스톡</string>
    <string name="ArbatStreet">아르바이트 거리</string>
    <string name="ArbatStreetAD">Россия, Приморский край, Владивосток, улица Адмирала Фокина</string>
    <string name="ArbatStreetEX">현지인이 블라디보스톡 아르바트라고 부르는 아르바트 거리는 주요 명소 중 하나로 시민과 관광객들에게 인기있는 휴양지이다. 길을 따라 위치한 아늑한 분위기의 카페들과 수많은 상점들을 보며 19세기에서 20세기 초의 깔끔한 건물을 감상하는 것은 즐거움을 선사한다. 아르바트 거리의 제일 큰 매력은 어디에서나 볼 수 있는 바다이다. 거리를 따라 내려가면 블라디보스톡 주민들이 가장 좋아하는 휴양지 중 하나인 Sportivnaya Embankment를 볼 수 있다.</string>
    <string name="MarinePark">해양공원</string>
    <string name="MarineParkAD">Улица Адмирала Фокина, Владивосток, Приморский край, Россия, 690091</string>
    <string name="MarineParkEX">전통적인 해변 산책로인 해양공원은 블라디보스톡 주민들이 가장 좋아하는 휴양지 중 하나이다. 사람들은 이곳에 와서 해변에서 일광욕을 하고, 놀이기구를 타고 분위기 좋은 카페에 앉아 바다 경치를 감상하고 해안을 따라 거닐며 도시의 번잡함에서 벗어나 쉬어간다.</string>
    <string name="CarouselAmusementPark">카루셀 놀이공원</string>
    <string name="CarouselAmusementParkBT">평일 10:00 – 21:00 주말 10:00 – 22:00</string>
    <string name="CarouselAmusementParkAD">Батарейная ул., 1, Владивосток, Приморский край, 690091</string>
    <string name="TicketPrice">티켓 가격</string>
    <string name="CarouselAmusementParkTP">입장료는 무료, 놀이기구는 100_300루블</string>
    <string name="CarouselAmusementParkEX">이른 봄부터 늦가을까지 운영되는 놀이공원으로 모든 연령대가 즐길 수 있는 26개의 놀이기구가 제공된다.</string>
    <string name="EagleObservatory">독수리 전망대</string>
    <string name="EagleObservatoryAD">Владивосток, Приморский край, 690091</string>
    <string name="TheWayToGo">가는 방법</string>
    <string name="EagleObservatoryWG">Verkhnyaya stantsiya 정류장에서 푸니쿨라 탑승</string>
    <string name="PunikullaPrice">푸니쿨라 요금</string>
    <string name="EagleObservatoryPP">14루블(편도), 현금결제만 가능</string>
    <string name="EagleObservatoryEX">도시의 한가운데 위치한 언덕 꼭대기기에 위치하여 아름다운 전경을 감상할 수 있는 자연적인 전망대이다. 전망대가 있는 언덕의 높이는 199m이며 관광객들은 전망대에서 골든 브릿지와 함께 멋진 사진을 촬영할 수 있다. 이 곳은 블라디보스톡에서 많은 관광객들이 방문한 명소 중 하나이다. </string>
    <string name="TriumphalArch">개선문</string>
    <string name="TriumphalArchAD">ул. Петра Великого, 6, Владивосток, Приморский край, 690091</string>
    <string name="TriumphalArchEX">러시아 제국의 마지막 황제 ‘ 니콜라이 2세’가 1891년 블라디보스톡을 방문한 것을 기념하기 위해 만든 건축물 개선문의 상층 앞면에는 ‘니콜라이 2세’의 얼굴이, 뒷면에는 블라디보스톡의 상징인 호랑이가 그려져 있다. 여행자들의 포토스팟으로 인기가 많음</string>
    <string name="FolklopskyCathedral">포크롭스키 성당</string>
    <string name="FolklopskyCathedralBT">매일, 08:00~19:00</string>
    <string name="FolklopskyCathedralAD">Океанский пр., 44, Владивосток, Приморский край, 690091</string>
    <string name="FolklopskyCathedralEX">1902년 건축된 블라디보스톡 최대 규모의 러시아 정교회 성당으로 현지인들의 경건한 예배장소로 사용되는 곳이다.</string>
    <string name="VladivostokStation">블라디보스톡 역</string>
    <string name="VladivostokStationAD">ул. Алеутская, 2, Владивосток, Приморский край, 690007</string>
    <string name="VladivostokStationEX">블라디보스톡의 기차역으로 시베리아 횡단철도의 종착역이다. 1890년대 초 러시아 마지막 황제 니콜라이 2세에 의해 설립된 기차역으로 모스크바의 야로슬라브스키역을 모티브 삼아 지어진 바로크양식의 건축물이다.</string>
    <string name="Moscow">모스크바</string>
    <string name="North">북쪽</string>
    <string name="Center">중앙</string>
    <string name="South">남쪽</string>
    <string name="IzmilovoMarket">이즈마일로보 시장</string>
    <string name="IzmilovoMarketBT">토 – 일 09:00 ~ 17:00</string>
    <string name="IzmilovoMarketAD">Измайловское ш., 73Ж, Москва, Россия</string>
    <string name="IzmilovoMarketEX">모스크바 시내에서 약간 떨어진 곳에 위치하고 있다. 주말에 이즈마일로보에 가면 러시아풍의 다양한 물건을 구입할 수 있다. 러시아 목각 인형 뿐 아니라 직접 손으로 만든 숄, 청백의 도자기로 만든 식기 및 장식품, 나무로 만든 다양한 도구, 서적이 판매된다. 군복과 같이 구소련 시대부터 내려져 오던 골동품을 구경하는 재미도 있다.</string>
    <string name="Bethenha">베데엔하</string>
    <string name="BethenhaBT">매일, 24시간</string>
    <string name="BethenhaAD">просп. Мира, 119, Москва, Россия</string>
    <string name="BethenhaEX">1939년 스탈린은 소비에트의 경제적 성과와 계획 경제의 성공을 자축하기 위해 전소련 농업 박람회 개최를 명령했다. 장소는 (당시 이름으로는) 경제 업적 박람회장(VDNKh)으로, 전형적인 사회주의 리얼리즘 양식으로 지어진 기념비적인 전시관이 모여 있었다. 박람회장은 1930년대 이후 여러 차례 대규모 증축을 거쳐 오늘날에도 여전히 사용되고 있다.</string>
    <string name="SakyamuniPark">사꼴니끼 공원</string>
    <string name="SakyamuniParkBT">매일, 24시간</string>
    <string name="SakyamuniParkAD">ул. Сокольнический Вал, 1, стр. 1, Москва, Россия</string>
    <string name="SakyamuniParkEX">소콜니키 공원은 유럽에서 가장 크고 모스크바에서 가장 오래된 공원으로 꼽히는 곳이다. 수세기 전에는 차르의 휴양지로 여겨졌지만, 이후에는 시민들의 장소가 되었다. 겨울에는 공원 중앙에 위치한 아이스 스케이트장의 인기가 높은데, 유료로 스케이트를 빌려 이용할 수 있다.</string>
    <string name="RedSquare">붉은 광장</string>
    <string name="RedSquareBT">매일, 24시간</string>
    <string name="RedSquareEX">붉은 광장은 본래 ‘아름다운 광장’으로 불렸으나, 많은 사람들이 메이데이와 혁명 기념일에 붉은색 현수막을 역사박물관과 굼 백화점 벽 등에 걸고 붉은 깃발을 손에 든 사람들이 광장으로 모이면서 광장이 온통 붉은색으로 물들었다는 데서 유래하여 붉은 광장으로 불리게 되었다. 15세기 말부터 크렘린 정면의 광장이 되었으며, 차르의 선언이나 판결, 포고가 내려지던 곳이었다. 광장 주변에는 레닌의 묘와 성 바실리 대성당, 러시아 국립역사박물관, 모스크바 최대의 백화점인 굼 백화점 등이 있어 항상 여행객들로 붐비고 현재까지도 많은 행사가 진행된다.</string>
    <string name="BasilicaCathedral">성 바실리 대성당</string>
    <string name="BasilicaCathedralBT">매일, 11:00~18:00</string>
    <string name="BasilicaCathedralAD">Красная площадь, 7, Москва, Россия</string>
    <string name="BasilicaCathedralEX">갖가지 색깔로 소용돌이치는 양파 모양의 돔으로 유명한 성 바실리 대성당은 잔혹한 황제 차르 이반 4세에 명에 따라, 1555년에서 1561년까지 그가 카잔의 타타르 칸 국(kan 國)을 정벌한 일을 기념하기 위해 세워졌다. 성 바실리 대성당은 단일한 토대 위에 모여 있는 아홉 채의 독립된 예배당으로 이루어져 있으며, 이 모두가 중앙의 첨탑을 둘러싸고 배열되어 있다.</string>
    <string name="ZarajiePark">자랴지에 공원</string>
    <string name="ZarajieParkBT">매일, 24시간</string>
    <string name="ZarajieParkAD">парк Зарядье, Москва, Россия</string>
    <string name="ZarajieParkEX">성 바실리 대성당 뒤쪽에 위치한 신생 공원으로 러시아 건립 870주년을 기념해 만들어졌다. 공원 시스템을 통해 계절과 기후 등에 따라 공원의 분위기 등이 달라지고, 특히 야경과 모스크바 강 위로 이어지는 다리에서 보이는 풍경이 아름다워서 최근 많은 사람들이 방문하는 명소이다.</string>
    <string name="GumDepartmentStore">굼 백화점</string>
    <string name="GumDepartmentStoreBT">매일 10:00~22:00</string>
    <string name="GumDepartmentStoreAD">Красная площадь, 3, Москва, Россия</string>
    <string name="GumDepartmentStoreEX">붉은 광장을 사이에 두고 레닌의 묘 맞은편에 가로로 뻗어 있는 러시아의 최고급 백화점이다. 1890년부터 3년에 걸쳐 세워졌으며 러시아혁명 뒤인 1953년에 지금과 같이 개조하였다. 백화점 내부는 중앙 분수대와 수입품 매장 등으로 호화롭게 꾸며져 있고 유리 천장 역시 화려하다. 쇼핑을 하지 않더라도 한 번씩 둘러보는 명소이며 백화점 내에 파는 아이스크림이 유명하다.</string>
    <string name="MoscowCity">모스크바 시티</string>
    <string name="MoscowCityAD">Пресненская набережная, д. 6, стр. 2, Москва, Россия</string>
    <string name="MoscowCityEX">모스크바 시티는 모스크바 국제 비즈니스 센터로 도시 재개발 프로젝트 및 지역의 명칭이며, 미래의 비즈니스와 지역 문화의 모든 측면을 다룬다.</string>
    <string name="MArbatStreet">아르바트 거리</string>
    <string name="Kyungbook">경복궁</string>
    <string name="Kyunghee">경희궁</string>
    <string name="Deoksu">덕수궁</string>
    <string name="Changdeok">창덕궁</string>
    <string name="Changkyung">창경궁</string>
    <string name="Buckcheon">북촌 한옥마을</string>
    <string name="Insa">인사동</string>
    <string name="Ickseon">익선동</string>
    <string name="Jeonju">전주 한옥마을</string>
    <string name="RiverPark">잠원 한강공원</string>
    <string name="Taeahn">태안 청산수목원</string>
    <string name="Injae">인제 자작나무 숲</string>
    <string name="Ulsan">울산 간월재</string>
    <string name="Dokdo">울릉도 독도박물관</string>
    <string name="Yangju">경기도 양주 일영역</string>
    <string name="Gangwondo">강원도 강릉 향호해변</string>
    <string name="Hwasung">경기도 화성 우음도</string>
    <string name="Saemangeum">전북 부안 새만금 간척지</string>
    <string name="Jungran">부산 정란각</string>
    <string name="Mokpo">목포 근대 역사관</string>
    <string name="Pohang">포항 구룡포 근대문화역사 거리</string>
</resources>