<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">
            <Button
                android:id="@+id/kyungbook_button"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/Kyungbook"/>
            <Button
                android:id="@+id/kyunghee_button"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/Kyunghee"/>
            <Button
                android:id="@+id/deoksu_button"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/Deoksu"/>
            <Button
                android:id="@+id/changdeok_button"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/Changdeok"/>
            <Button
                android:id="@+id/changkyung_button"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/Changkyung"/>
            <Button
                android:id="@+id/buckcheon_button"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/Buckcheon"/>
            <Button
                android:id="@+id/insa_button"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/Insa"/>
            <Button
                android:id="@+id/ickseon_button"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/Ickseon"/>
            <Button
                android:id="@+id/jeonju_button"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/Jeonju"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>