<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">
            <Button
                android:id="@+id/yangu_button"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/Yangju"/>
            <Button
                android:id="@+id/gangwondo_button"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/Gangwondo"/>
            <Button
                android:id="@+id/hwasung_button"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/Hwasung"/>
            <Button
                android:id="@+id/saemangeum_button"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/Saemangeum"/>
            <Button
                android:id="@+id/jungran_button"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/Jungran"/>
            <Button
                android:id="@+id/mokpo_button"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/Mokpo"/>
            <Button
                android:id="@+id/pohang_button"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/Pohang"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>