<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">
            <Button
                android:id="@+id/river_button"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/RiverPark"/>
            <Button
                android:id="@+id/taeahn_button"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/Taeahn"/>
            <Button
                android:id="@+id/injae_button"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/Injae"/>
            <Button
                android:id="@+id/ulsan_button"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/Ulsan"/>
            <Button
                android:id="@+id/dokdo_button"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/Dokdo"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>